[gd_scene load_steps=19 format=3 uid="uid://b0kgf7r32ovc2"]

[ext_resource type="Script" uid="uid://dlgdkb6jl6hdu" path="res://Scenes/goblin.gd" id="1_gbw3e"]
[ext_resource type="Shader" uid="uid://2auxmwafr4ty" path="res://Scenes/flicker.gdshader" id="2_fkbyy"]
[ext_resource type="Texture2D" uid="uid://dntlr7uiqbdx6" path="res://graphics/Enemies/goblin shoot 2x1.png" id="3_2gt0r"]
[ext_resource type="Texture2D" uid="uid://daqlkf0wxgg8i" path="res://graphics/Enemies/goblin stand 2x1.png" id="4_o6mmh"]
[ext_resource type="Texture2D" uid="uid://c4jkwt1y84s4d" path="res://graphics/Enemies/goblin walk 2x1.png" id="5_ep384"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ajbjq"]
resource_local_to_scene = true
shader = ExtResource("2_fkbyy")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_p60ou"]
atlas = ExtResource("3_2gt0r")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpiyv"]
atlas = ExtResource("3_2gt0r")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m25tm"]
atlas = ExtResource("3_2gt0r")
region = Rect2(17, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfpgn"]
atlas = ExtResource("4_o6mmh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_deoj1"]
atlas = ExtResource("4_o6mmh")
region = Rect2(17, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_su1ic"]
atlas = ExtResource("5_ep384")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbm5p"]
atlas = ExtResource("5_ep384")
region = Rect2(17, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_j40lr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p60ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpiyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m25tm")
}],
"loop": false,
"name": &"attack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfpgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_deoj1")
}],
"loop": true,
"name": &"stand",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_su1ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbm5p")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xw773"]
radius = 6.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sna4k"]
size = Vector2(13, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8ltg"]
size = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_js1vq"]
size = Vector2(1, 1)

[node name="Goblin" type="Area2D"]
collision_layer = 4
collision_mask = 18
script = ExtResource("1_gbw3e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ajbjq")
position = Vector2(1, -4)
sprite_frames = SubResource("SpriteFrames_j40lr")
animation = &"attack"
autoplay = "walk"
flip_h = true

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(1, -3)
shape = SubResource("CapsuleShape2D_xw773")

[node name="BorderArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderArea2D"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_sna4k")

[node name="RightCliffArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCliffArea"]
position = Vector2(7, 5)
shape = SubResource("RectangleShape2D_m8ltg")

[node name="LeftCliffArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCliffArea"]
position = Vector2(-4, 5)
shape = SubResource("RectangleShape2D_js1vq")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -8.0
offset_top = -16.0
offset_right = 28.0
offset_bottom = -10.0
scale = Vector2(0.5, 0.5)
show_percentage = false

[node name="regin_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Fireball_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="movement" type="Timer" parent="."]
wait_time = 1.7999999999999998

[node name="CooldownBar" type="ProgressBar" parent="."]
modulate = Color(0.7873402, 0.7485401, 0.7366042, 1)
offset_left = -5.0
offset_top = -12.0
offset_right = 19.0
offset_bottom = -8.0
scale = Vector2(0.5, 0.5)
show_percentage = false

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="BorderArea2D" to="." method="_on_border_area_2d_body_entered"]
[connection signal="body_entered" from="RightCliffArea" to="." method="_on_right_cliff_area_body_entered"]
[connection signal="body_exited" from="RightCliffArea" to="." method="_on_right_cliff_area_body_exited"]
[connection signal="body_entered" from="LeftCliffArea" to="." method="_on_left_cliff_area_body_entered"]
[connection signal="body_exited" from="LeftCliffArea" to="." method="_on_left_cliff_area_body_exited"]
[connection signal="timeout" from="regin_timer" to="." method="_on_regin_timer_timeout"]
[connection signal="timeout" from="Fireball_timer" to="." method="_on_fireball_timer_timeout"]
[connection signal="timeout" from="movement" to="." method="_on_movement_timeout"]
